Update pages: index, login, policies, register-artisan

--- a/login.html
+++ b/login.html
@@ -150,10 +150,18 @@
               <a href="#" class="small">Forgot password?</a>
             </div>
 
-            <div class="d-grid gap-2">
+            <!-- <div class="d-grid gap-2">
               <button class="btn btn-primary">Login</button>
               <button class="btn btn-outline-secondary"><i class="bi bi-person-walking me-1"></i> Continue as Guest</button>
-            </div>
+            </div> -->
+            
+            <div class="d-grid gap-2">
+  <a class="btn btn-primary" href="/index.html">Login</a>
+  <a class="btn btn-outline-secondary" href="/index.html">
+    <i class="bi bi-person-walking me-1"></i> Continue as Guest
+  </a>
+</div>
+
 
             <div class="text-center small mt-3">New here? <a href="#">Create account</a></div>
 
