--- a/gallery.html
+++ b/gallery.html
@@ -197,8 +197,8 @@
       <div class="row g-3" id="gallery">
         <!-- Each col needs data-type + data-title for filters -->
         <div class="col-6 col-md-3" data-type="Pottery" data-title="Blue Bowl Jaipur" data-aos="zoom-in" data-aos-delay="0">
-          <a href="assets/img/p1.jpg" class="glightbox" data-gallery="g1" data-title="Blue Bowl — Jaipur">
-            <div class="thumb tilt"><img src="assets/img/p1.jpg" alt=""><div class="overlay">Pottery • Blue Bowl</div></div>
+          <a href="assets/img/blue.jpeg" class="glightbox" data-gallery="g1" data-title="Blue Bowl — Jaipur">
+            <div class="thumb tilt"><img src="assets/img/blue.jpeg" alt=""><div class="overlay">Pottery • Blue Bowl</div></div>
           </a>
         </div>
         <div class="col-6 col-md-3" data-type="Textiles" data-title="Ajrakh Scarf Kutch Indigo" data-aos="zoom-in" data-aos-delay="30">
@@ -227,8 +227,8 @@
           </a>
         </div>
         <div class="col-6 col-md-3" data-type="Pottery" data-title="Wheel Thrown Cup Ahmedabad" data-aos="zoom-in" data-aos-delay="180">
-          <a href="assets/img/h2.png" class="glightbox" data-gallery="g1" data-title="Wheel-thrown Cup — Ahmedabad">
-            <div class="thumb tilt"><img src="assets/img/h2.png" alt=""><div class="overlay">Pottery • Cup</div></div>
+          <a href="assets/img/cup.jpeg" class="glightbox" data-gallery="g1" data-title="Wheel-thrown Cup — Ahmedabad">
+            <div class="thumb tilt"><img src="assets/img/cup.jpeg" alt=""><div class="overlay">Pottery • Cup</div></div>
           </a>
         </div>
         <div class="col-6 col-md-3" data-type="Textiles" data-title="Block Printed Napkins Ahmedabad" data-aos="zoom-in" data-aos-delay="210">
