--- a/products.html
+++ b/products.html
@@ -264,8 +264,8 @@
       <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="160" data-category="Textiles" data-name="Handwoven Stole Meera Textiles">
         <div class="card product-card h-100 shadow-sm position-relative">
           <span class="heart-burst"></span>
-          <a href="assets/img/w2.jpg" class="glightbox" data-gallery="quick">
-            <img src="assets/img/w2.jpg" class="card-img-top" alt="">
+          <a href="assets/img/scarf.jpeg" class="glightbox" data-gallery="quick">
+            <img src="assets/img/scarf.jpeg" class="card-img-top" alt="">
           </a>
           <div class="card-body">
             <h6 class="card-title">Handwoven Stole</h6>
@@ -273,7 +273,7 @@
             <div class="d-flex justify-content-between align-items-center">
               <strong>₹1499</strong>
               <div class="d-flex gap-2">
-                <a href="assets/img/w1.jpg" class="btn btn-sm btn-outline-primary glightbox" data-gallery="quick"><i class="bi bi-eye"></i></a>
+                <a href="assets/img/scarf.jpeg" class="btn btn-sm btn-outline-primary glightbox" data-gallery="quick"><i class="bi bi-eye"></i></a>
                 <button class="btn btn-sm btn-outline-dark" data-like><i class="bi bi-heart"></i></button>
                 <button class="btn btn-sm btn-dark" data-add-cart><i class="bi bi-bag-plus"></i></button>
               </div>
@@ -327,8 +327,8 @@
       <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="280" data-category="Textiles" data-name="Block-printed Tote Meera Textiles">
         <div class="card product-card h-100 shadow-sm position-relative">
           <span class="heart-burst"></span>
-          <a href="assets/img/h4.png" class="glightbox" data-gallery="quick">
-            <img src="assets/img/h4.png" class="card-img-top" alt="">
+          <a href="assets/img/bag.jpeg" class="glightbox" data-gallery="quick">
+            <img src="assets/img/bag.jpeg" class="card-img-top" alt="">
           </a>
           <div class="card-body">
             <h6 class="card-title">Block-printed Tote</h6>
@@ -336,7 +336,7 @@
             <div class="d-flex justify-content-between align-items-center">
               <strong>₹899</strong>
               <div class="d-flex gap-2">
-                <a href="assets/img/h4.png" class="btn btn-sm btn-outline-primary glightbox" data-gallery="quick"><i class="bi bi-eye"></i></a>
+                <a href="assets/img/bag.jpeg" class="btn btn-sm btn-outline-primary glightbox" data-gallery="quick"><i class="bi bi-eye"></i></a>
                 <button class="btn btn-sm btn-outline-dark" data-like><i class="bi bi-heart"></i></button>
                 <button class="btn btn-sm btn-dark" data-add-cart><i class="bi bi-bag-plus"></i></button>
               </div>
