--- a/stories.html
+++ b/stories.html
@@ -301,7 +301,7 @@
         <!-- More length: additional stories -->
         <div class="col-md-4" data-aos="fade-up" data-type="Wood" data-title="Saharanpur Wood Carving Floral Arabesque">
           <article class="card h-100 shadow-sm">
-            <img src="assets/img/w1.jpg" class="card-img-top" alt="Wood carving tools on timber">
+            <img src="assets/img/wood.jpeg" class="card-img-top" alt="Wood carving tools on timber">
             <div class="card-body">
               <h5 class="card-title">Saharanpur Wood Carving</h5>
               <p class="small text-secondary">Hand-tooled arabesques and floral lattices.</p>
