--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     </div>
     <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
       <article class="card h-100 shadow-sm">
-        <img src="assets/img/h2.png" class="card-img-top" alt="">
+        <img src="assets/img/metal.jpeg" class="card-img-top" alt="">
         <div class="card-body">
           <h5 class="card-title">Dhokra Metal Casting</h5>
           <p class="small lead-muted">Lost-wax tradition from central India.</p>
@@ -363,44 +363,7 @@
     </div>
   </div>
 </section>
-<!-- 
-  <footer class="mt-5 border-top">
-    <div class="container py-5">
-      <div class="row g-4">
-        <div class="col-md-4">
-          <h5 class="fw-bold">Local Artisans</h5>
-          <p class="small lead-muted">A curated marketplace celebrating handcraft, culture, and community.</p>
-        </div>
-        <div class="col-md-2">
-          <h6 class="fw-semibold">Explore</h6>
-          <ul class="list-unstyled small">
-            <li><a href="artists.html" class="link-body-emphasis">Artists</a></li>
-            <li><a href="products.html" class="link-body-emphasis">Products</a></li>
-            <li><a href="workshops.html" class="link-body-emphasis">Workshops</a></li>
-            <li><a href="stories.html" class="link-body-emphasis">Stories</a></li>
-          </ul>
-        </div>
-        <div class="col-md-2">
-          <h6 class="fw-semibold">Info</h6>
-          <ul class="list-unstyled small">
-            <li><a href="about.html">About</a></li>
-            <li><a href="faq.html">Help & FAQ</a></li>
-            <li><a href="policies.html">Policies</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <h6 class="fw-semibold">Impact</h6>
-          <div class="d-flex gap-4">
-            <div><span class="h4 mb-0 d-block" id="countArtisans">0</span><span class="small text-secondary">Artisans</span></div>
-            <div><span class="h4 mb-0 d-block" id="countProducts">0</span><span class="small text-secondary">Products</span></div>
-            <div><span class="h4 mb-0 d-block" id="countWorkshops">0</span><span class="small text-secondary">Workshops</span></div>
-          </div>
-        </div>
-      </div>
-      <div class="small text-secondary mt-3">© 2025 Local Artisans. Handcrafted with ♥.</div>
-    </div>
-  </footer> -->
+
 
   <!-- Back-to-top -->
   <button id="backToTop" class="back-to-top" aria-label="Back to top">
