--- a/login.html
+++ b/login.html
@@ -77,8 +77,17 @@
       box-shadow:var(--shadow); opacity:0; visibility:hidden; transform:translateY(10px); transition:all .3s ease; z-index:2000;
     }
     .back-to-top.show{opacity:1; visibility:visible; transform:translateY(0)}
+/* 
+    @media (max-width:576px){ .section{ padding:56px 0 } } */
+    
+    footer{
+      background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.00));
+      border-top:1px solid rgba(255,255,255,.06);
+    }
 
-    @media (max-width:576px){ .section{ padding:56px 0 } }
+    @media (max-width:576px){
+      .hero .input-group{width:100%!important}
+    }
   </style>
 </head>
 <body>
