--- a/register-artisan.html
+++ b/register-artisan.html
@@ -123,15 +123,31 @@
       box-shadow:var(--shadow); opacity:0; visibility:hidden; transform:translateY(10px); transition:all .3s ease; z-index:2000;
     }
     .back-to-top.show{opacity:1; visibility:visible; transform:translateY(0)}
-
+/* 
     @media (max-width:576px){ .section{padding:56px 0} .timeline{padding-left:56px} .timeline::before{left:28px} .t-item::before{left:20px} }
     .preview-img img {
   width: 100%;
   height: 200px;
   object-fit: cover;
   border-radius: 10px;
-}
+} */
+/* 
+    footer{
+      background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.00));
+      border-top:1px solid rgba(255,255,255,.06);
+    }
 
+    @media (max-width:576px){
+      .hero .input-group{width:100%!important}
+    } */
+     footer{
+      background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.00));
+      border-top:1px solid rgba(255,255,255,.06);
+    }
+
+    @media (max-width:576px){
+      .hero .input-group{width:100%!important}
+    }
   </style>
 </head>
 <body>
@@ -369,12 +385,13 @@
   </section>
 
   <!-- FOOTER -->
+<!--   
   <footer class="mt-5 border-top">
     <div class="container py-5">
       <div class="row g-4">
         <div class="col-md-4">
           <h5 class="fw-bold">Local Artisans</h5>
-          <p class="small text-secondary">A curated marketplace celebrating handcraft, culture, and community.</p>
+          <p class="small lead-muted">A curated marketplace celebrating handcraft, culture, and community.</p>
         </div>
         <div class="col-md-2">
           <h6 class="fw-semibold">Explore</h6>
@@ -399,14 +416,53 @@
           <div class="d-flex gap-4">
             <div><span class="h4 mb-0 d-block" id="countArtisans">0</span><span class="small text-secondary">Artisans</span></div>
             <div><span class="h4 mb-0 d-block" id="countProducts">0</span><span class="small text-secondary">Products</span></div>
-            <div><span class="h4 mb-0 d-block" id="countWorkshops2">0</span><span class="small text-secondary">Workshops</span></div>
+            <div><span class="h4 mb-0 d-block" id="countWorkshops">0</span><span class="small text-secondary">Workshops</span></div>
+          </div>
+        </div>
+      </div>
+      <div class="small text-secondary mt-3">© 2025 Local Artisans. Handcrafted with ♥.</div>
+    </div>
+  </footer> -->
+
+
+  
+  <footer class="mt-5 border-top">
+    <div class="container py-5">
+      <div class="row g-4">
+        <div class="col-md-4">
+          <h5 class="fw-bold">Local Artisans</h5>
+          <p class="small lead-muted">A curated marketplace celebrating handcraft, culture, and community.</p>
+        </div>
+        <div class="col-md-2">
+          <h6 class="fw-semibold">Explore</h6>
+          <ul class="list-unstyled small">
+            <li><a href="artists.html" class="link-body-emphasis">Artists</a></li>
+            <li><a href="products.html" class="link-body-emphasis">Products</a></li>
+            <li><a href="workshops.html" class="link-body-emphasis">Workshops</a></li>
+            <li><a href="stories.html" class="link-body-emphasis">Stories</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h6 class="fw-semibold">Info</h6>
+          <ul class="list-unstyled small">
+            <li><a href="about.html">About</a></li>
+            <li><a href="faq.html">Help & FAQ</a></li>
+            <li><a href="policies.html">Policies</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h6 class="fw-semibold">Impact</h6>
+          <div class="d-flex gap-4">
+            <div><span class="h4 mb-0 d-block" id="countArtisans">0</span><span class="small text-secondary">Artisans</span></div>
+            <div><span class="h4 mb-0 d-block" id="countProducts">0</span><span class="small text-secondary">Products</span></div>
+            <div><span class="h4 mb-0 d-block" id="countWorkshops">0</span><span class="small text-secondary">Workshops</span></div>
           </div>
         </div>
       </div>
       <div class="small text-secondary mt-3">© 2025 Local Artisans. Handcrafted with ♥.</div>
     </div>
   </footer>
-
   <!-- Back-to-top -->
   <button id="backToTop" class="back-to-top" aria-label="Back to top"><i class="bi bi-arrow-up-short fs-4"></i></button>
 
