UI: consistent footer + fixes on contact, login, policies, register-artisan

--- a/login.html
+++ b/login.html
@@ -80,14 +80,20 @@
 /* 
     @media (max-width:576px){ .section{ padding:56px 0 } } */
     
-    footer{
+    /* footer{
       background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.00));
       border-top:1px solid rgba(255,255,255,.06);
     }
 
     @media (max-width:576px){
       .hero .input-group{width:100%!important}
-    }
+    } */
+
+    footer{
+  background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.00));
+  border-top:1px solid rgba(255,255,255,.06);
+}
+
   </style>
 </head>
 <body>
