--- a/policies.html
+++ b/policies.html
@@ -104,6 +104,10 @@
     }
     .back-to-top.show{opacity:1; visibility:visible; transform:translateY(0)}
 
+     footer{
+  background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.00));
+  border-top:1px solid rgba(255,255,255,.06);
+}
     @media (max-width:576px){ .section{ padding:56px 0 } .timeline{padding-left:56px} .timeline::before{left:28px} .t-item::before{left:20px} }
   </style>
 </head>
